--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div class="header_row">
                 <a class="header_logo" href="https://github.com/brunoluisr/"></a>
                 <ul class="header_menu">
-                    <li class="header_link">Header link one</li>
-                    <li class="header_link">Header link two</li>
-                    <li class="header_link">Header link three</li>
+                    <li class="header_link">Home</li>
+                    <li class="header_link">About</li>
+                    <li class="header_link">Contacts</li>
                 </ul>
             </div>
         </div>
@@ -28,10 +28,10 @@
                 <div class="about_content">
                     <h1 class="about_title">This website is awesome</h1>
                     <div class="about_text">
-                    This website has some subtext that goes here under the main title.
+                    This website has subtext that goes here under the main title. It's a smaller font and the color is lower contrast
                     </div>
                 </div>
-                <button class="about_button">Sign up</button>
+                <a class="about_button" href="#">Sign up</a>
             </div>
         </div>
     </div>
@@ -41,19 +41,19 @@
         <h2 class="information_title">Some information</h2>
         <div class="information_row">
             <div class="information_column">
-                <a class="information_image" href=""></a>
+                <a class="information_image" href="#"></a>
                 <div class="information_text">This is something about the picture above</div>
             </div>
             <div class="information_column">
-                <a class="information_image" href=""></a>
+                <a class="information_image" href="#"></a>
                 <div class="information_text">This is something about the picture above</div>
             </div>
             <div class="information_column">
-                <a class="information_image" href=""></a>
+                <a class="information_image" href="#"></a>
                 <div class="information_text">This is something about the picture above</div>
             </div>
             <div class="information_column">
-                <a class="information_image" href=""></a>
+                <a class="information_image" href="#"></a>
                 <div class="information_text">This is something about the picture above</div>
             </div>
         </div>
@@ -76,7 +76,7 @@
                     Sign up there for our product by clicking that button right over there!
                 </div>
             </div>
-            <div class="Sign-up_btn">Sign in</div>
+            <div class="sign-up_btn">Sign in</div>
         </div>
     </div>
 </div>
