--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 </div>
-<div class="section two">
+<div class="section_two">
     <div class="container">
         <h2 class="information_title">Some information</h2>
         <div class="information_row">
@@ -59,7 +59,7 @@
         </div>
     </div>
 </div> 
-<div class="section three">
+<div class="section_three">
     <div class="container">
         <div class="review_text">
             "Bla bla bla"
@@ -67,7 +67,7 @@
         <div class="review_author">- Bruno Ribeiro</div>
     </div>
 </div>
-<div class="section four"></div>
+<div class="section_four"></div>
     <div class="container">
         <div class="sign-up_context">
             <div class="sign-up_text">
