--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
     <div class="info"></div>
         <div class="container">
             <div class="about_row">
-                <div class="about_image"></div>
+                <div class="about_image">
+                    <img src="img/img04.jpg" alt="">
+                </div>
                 <div class="about_content">
                     <h1 class="about_title">This website is awesome</h1>
                     <div class="about_text">
                     This website has subtext that goes here under the main title. It's a smaller font and the color is lower contrast
                     </div>
+                    <a class="about_button" href="#">Sign up</a>
                 </div>
-                <a class="about_button" href="#">Sign up</a>
             </div>
         </div>
     </div>
