--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="section_one">
-    <div class="header">
+    <header class="header">
         <div class="container">
             <div class="header_row">
                 <a class="header_logo" href="https://github.com/brunoluisr/"></a>
@@ -20,7 +20,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </header>
     <div class="info"></div>
         <div class="container">
             <div class="about_row">
